# forge

./: .clang-format  .gitignore  CMakeLists.txt  vcpkg.json
.github/workflows/: blank.yml  clang-format.yml  clang-tidy-reivew.yml  clang-tidy.yml  cppcheck.yml  matrix-build.yml  static-analysis.yml
forge/forge-client/: CMakeLists.txt
forge/forge-client/src/: main.cpp
forge/forge-core/: CMakeLists.txt
forge/forge-core-tests/: CMakeLists.txt
forge/forge-core-tests/src/: test.cpp
forge/forge-core/src/sample/: sample.cpp  sample.h
scripts/cmake/: conan_dependencies.cmake  project_settings.cmake  vcpkg_dependencies.cmake
scripts/setup/: setup_osx.sh
scripts/vcpkg/: vcpkg_x64-osx.txt  vcpkg_x64-windows.txt
